--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<h1>Hello! How are things going? What are you doing?</h1>
+	<h1>Hello! How are things going?</h1>
 </body>
 
 </html>
